.provarCaches/00D4P000000xR5ZUAU/objects/Flosum__Repository_Manifest__c.object
<CustomObject>
    <fields>
        <fullName>Flosum__Comments__c</fullName>
        <formula>Flosum__Component_History__r.Flosum__Comments__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Comments</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Component_History__c</fullName>
        <label>Component History</label>
        <referenceTo>Flosum__Component_History__c</referenceTo>
        <relationshipLabel>Repository Manifest</relationshipLabel>
        <relationshipName>Repository_Manifest</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Flosum__Component_Name__c</fullName>
        <formula>HYPERLINK( 
&apos;/&apos;+ Flosum__Component_History__r.Flosum__Component__c , 
 Flosum__Component_History__r.Flosum__Component__r.Flosum__Component_Name__c , 
&apos;_self&apos; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Component Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Component_Type__c</fullName>
        <formula>TEXT(Flosum__Component_History__r.Flosum__Component__r.Flosum__Component_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Component Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Last_Updated_On__c</fullName>
        <formula>Flosum__Component_History__r.Flosum__Component__r.Flosum__Last_Modified_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Changed On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Flosum__Patch__c</fullName>
        <label>Patch</label>
        <referenceTo>Flosum__Patch__c</referenceTo>
        <relationshipLabel>Manifest</relationshipLabel>
        <relationshipName>Repository_Manifest</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Flosum__Version__c</fullName>
        <formula>Flosum__Component_History__r.Flosum__Version__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Version</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Repository Manifest</label>
    <nameField>
        <displayFormat>RM-{YYYY}-{MM}-{DD}-{0000}</displayFormat>
        <label>Repository Manifest Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Repository Manifest</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>